# basic_robotics

./: README.md
models/: double_pendulum.urdf
pid_quadrotor/: 1D-Drone.py  pid.py
pid_turtle/: CMakeLists.txt  README.md  package.xml
pid_turtle/src/: listen.cpp  send.cpp
trajopt/: test.py  test2.py
